# rust-freude

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
benches/: lib.rs
examples/: lorenz.rs
freude_derive/: Cargo.toml
freude_derive/src/: internals.rs  lib.rs
freude_derive/tests/: derive.rs
src/: integrator.rs  integrators.rs  lib.rs  observers.rs  ode.rs  stepper.rs  steppers.rs  traits.rs  tuples.rs  utils.rs
src/ode/: mod.rs  tuple_impls.rs
src/stepper/: euler.rs  heun.rs  impl_euler.rs  impl_heun.rs  impl_runge_kutta_4.rs  mod.rs  runge_kutta_4.rs  tuple_impls.rs
src/steppers/: euler.rs  heun.rs  impl_euler.rs  impl_heun.rs  impl_runge_kutta_4.rs  impl_tuples.rs  mod.rs  runge_kutta_4.rs  tuple_impls.rs
tests/: lib.rs
