[package]
name = "freude"
version = "0.5.0"
edition = "2018"
authors = ["Superfluffy"]
license = "MIT/Apache-2.0"

repository = "https://github.com/SuperFluffy/rust-freude"

description = "Something that is supposed to develop into a fully fledged ODE library."

keywords = ["ODE", "numerics", "ndarray", "rungekutta", "euler"]
categories = ["science"]

[lib]
name = "freude"

[dependencies]

[dependencies.ndarray]
version = "0.12"

[dependencies.tuple]
version = "0.4"
optional = true

[dev-dependencies]
approx = "0.3"
blas = "0.17"
ndarray-rand = "0.9"
rand = "0.6"

[features]

# This feature is used for testing the nightly only
nightly_test = ["tuple"]

[[example]]
name = "lorenz"
required-features = ["tuple"]
